sorted ubuntu again.. need submodules to initialize

--- a/roles/console-user/tasks/environment.yml
+++ b/roles/console-user/tasks/environment.yml
@@ -2,13 +2,13 @@
 ##########################################################################################
 ###############           Primary:               ###########################################
 ##########################################################################################
-- name: GET MAIN CONFIG
-  git:
-    repo: git@github.com:nargetdev/environment.git
-    dest: ~/environment
-    clone: yes
-    # track_submodules: yes
-  tags:
-    - test
+# - name: GET MAIN CONFIG
+#   git:
+#     repo: git@github.com:nargetdev/environment.git
+#     dest: ~/environment
+#     clone: yes
+#     # track_submodules: yes
+#   tags:
+#     - test
 
 - import_tasks: color.yml
