--- a/workstation.yml
+++ b/workstation.yml
@@ -7,13 +7,11 @@
   #   CAREER_PATH: "/mnt/c/Users/narge/DEV/CAREER"
   # become: nateargetsinger
   roles:
-    # - common
     # - grav_web_dev
     #- ansible-role-kaneka-dev
-    #  - gitter
-    #  - console-user
-    #  - system-specific-bandaid
-     - gui
+    - gitter
+    - console-user
+    - gui
   # - meshcandy_firmware_dev
   # - configure_mercurial
   # - ansible_developer
