--- a/workstation.yml
+++ b/workstation.yml
@@ -9,7 +9,7 @@
   roles:
     # - grav_web_dev
     #- ansible-role-kaneka-dev
-    - gitter
+    # - gitter
     # - console-user
     # - gui
     - ansible-role-symmetry-developer
