--- a/roles/console-user/tasks/main.yml
+++ b/roles/console-user/tasks/main.yml
@@ -21,4 +21,7 @@
 
 - import_tasks: editor.yml
 
-- import_tasks: environment.yml
+# - import_tasks: environment.yml
+
+- debug: msg="use gnome-tweak-tool to adjust caps-lock"
+# - import_tasks: guided_tutorial.yml
