--- a/workstation.yml
+++ b/workstation.yml
@@ -9,10 +9,10 @@
   roles:
     # - grav_web_dev
     #- ansible-role-kaneka-dev
-    # - gitter
+    - gitter
     # - console-user
     # - gui
-    - ansible-role-symmetry-developer
+    # - ansible-role-symmetry-developer
   # - meshcandy_firmware_dev
   # - configure_mercurial
   # - ansible_developer
