--- a/workstation.yml
+++ b/workstation.yml
@@ -8,11 +8,11 @@
   # become: nateargetsinger
   roles:
     # - grav_web_dev
-    #- ansible-role-kaneka-dev
+    # - ansible-role-kaneka-dev
     # - gitter
-    # - console-user
-    # - gui
+    - console-user
     - ansible-role-symmetry-developer
+        # - gui
   # - meshcandy_firmware_dev
   # - configure_mercurial
   # - ansible_developer
