--- a/workstation.yml
+++ b/workstation.yml
@@ -10,8 +10,8 @@
     # - grav_web_dev
     # - ansible-role-kaneka-dev
     # - gitter
-    - console-user
-    # - ansible-role-symmetry-developer
+    # - console-user
+    - ansible-role-symmetry-developer
         # - gui
   # - meshcandy_firmware_dev
   # - configure_mercurial
