--- a/roles/gitter/tasks/debian_ancillary.yml
+++ b/roles/gitter/tasks/debian_ancillary.yml
@@ -20,13 +20,14 @@
   register: key_result
 
 
-- name: use the ssh key
-  lineinfile: dest={{ item.file }} state=present line={{ item.line }}
-  with_items:
-    - { line: 'eval "$(ssh-agent -s)"', file: "{{lookup('env', 'HOME')}}/.bashrc" }
-    - { line: 'eval "$(ssh-agent -s)"', file: "{{lookup('env', 'HOME')}}/.zshrc" }
-    - { line: 'ssh-add ~/.ssh/id_rsa', file: "{{lookup('env', 'HOME')}}/.bashrc" }
-    - { line: 'ssh-add ~/.ssh/id_rsa', file: "{{lookup('env', 'HOME')}}/.zshrc" }
+
+# - name: use the ssh key
+#   lineinfile: dest={{ item.file }} state=present line={{ item.line }}
+#   with_items:
+#     - { line: 'eval "$(ssh-agent -s)"', file: "{{lookup('env', 'HOME')}}/.bashrc" }
+#     - { line: 'eval "$(ssh-agent -s)"', file: "{{lookup('env', 'HOME')}}/.zshrc" }
+#     - { line: 'ssh-add ~/.ssh/id_rsa', file: "{{lookup('env', 'HOME')}}/.bashrc" }
+#     - { line: 'ssh-add ~/.ssh/id_rsa', file: "{{lookup('env', 'HOME')}}/.zshrc" }
     
     
 # - name: pipe key to clipboard UBUNTU
