can't remember this.. must stop doing this

--- a/workstation.yml
+++ b/workstation.yml
@@ -7,6 +7,7 @@
   #   CAREER_PATH: "/mnt/c/Users/narge/DEV/CAREER"
   # become: nateargetsinger
   roles:
+    # - ansible-role-symmetry-dev
     # - common
     # - grav_web_dev
     #- ansible-role-kaneka-dev
