--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "roles/ansible-role-kaneka-dev"]
 	path = roles/ansible-role-kaneka-dev
 	url = git@github.com:KanekaLanguage/ansible-role-kaneka-dev.git
+[submodule "roles/ansible-role-symmetry-dev"]
+	path = roles/ansible-role-symmetry-dev
+	url = git@github.com:SymmetryLabs/ansible-role-symmetry-developer.git
