--- a/roles/gui/tasks/main.yml
+++ b/roles/gui/tasks/main.yml
@@ -19,3 +19,8 @@
   when: ansible_os_family == "Debian"
 
 - debug: msg="ok run compizconfig from the launcher and remove"
+
+
+- name: get dropbox for organization
+  import_tasks: dropbox.yml
+  tags: test
